--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "coc-diagnostic": ">=0.22.1",
     "coc-json": ">=1.3.6",
+    "coc-snippets": ">=2.4.6",
     "coc-tsserver": ">=1.8.6"
   }
 }
