--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -15,8 +15,15 @@ bind k select-pane -U
 # less colourful status
 set -g status-bg colour240
 set -g status-fg white
+
 # 256 colors support
 set -g default-terminal "screen-256color"
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
+# for tmux 3.2, you can use the following setting instead:
+# set -as terminal-features ",xterm-256color:RGB"
+
 # sane scrolling
 set -g mouse on
 # list of plugins
