--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
   "suggest.noselect": false,
-  "diagnostic.displayByAle": true
+  "diagnostic.displayByAle": true,
+  "javascript.suggestionActions.enabled": false
 }
